--- a/buildtools/conf/Makefile.ag
+++ b/buildtools/conf/Makefile.ag
@@ -50,6 +50,6 @@ headers_html = {
 	SOURCES = website.html
 }
 
-EXTRA_DIST = rules.mk MonetDB.m4 Mdebootstrap
+EXTRA_DIST = rules.mk MonetDB.m4
 
 EXTRA_DIST_DIR = mock
