--- a/monetdb5/RunMtest.in
+++ b/monetdb5/RunMtest.in
@@ -34,13 +34,13 @@ do
 done
 
 # enhance various paths to find our stuff
-binpath="${builddir}/tools:${srcdir}/tools:${buildbase}/testing/src"
+binpath="${builddir}/tools:${srcdir}/tools:${buildbase}/testing"
 libpath="${MOD_PATH}:${builddir}/mal/.libs"
 
 PATH="${binpath}:$PATH"
 export PATH
 
-PYTHONPATH="${buildbase}/testing/src:${srcdir}/../testing/src:${PYTHONPATH}"
+PYTHONPATH="${buildbase}/testing:${srcdir}/../testing:${PYTHONPATH}"
 export PYTHONPATH
 
 if [ "${LD_LIBRARY_PATH}" ] ; then
@@ -72,4 +72,4 @@ cd "$srcdir"
 # arguments.
 # if the environment variable MTEST_AT is set (value does not matter), pass
 # the --at flag to Mtest.py so that it uses the at command as a watchdog.
-exec python "${buildbase}/testing/src/Mtest.py" --config="${builddir}/conf/monetdb5.conf" --package=${pkg} --monet_mod_path="${MOD_PATH}" --dbfarm="${builddir}/dbfarm" --TSTTRGBASE="${builddir}" ${MTEST_AT+--at} "${@--rq}"
+exec python "${buildbase}/testing/Mtest.py" --config="${builddir}/conf/monetdb5.conf" --package=${pkg} --monet_mod_path="${MOD_PATH}" --dbfarm="${builddir}/dbfarm" --TSTTRGBASE="${builddir}" ${MTEST_AT+--at} "${@--rq}"
