--- a/pathfinder/RunMtest.in
+++ b/pathfinder/RunMtest.in
@@ -67,13 +67,13 @@ done
 esac
 
 # enhance various paths to find our stuff
-binpath="${builddir}/compiler:${builddir}/tools:${buildbase}/monetdb$V/tools:${buildbase}/testing/src"
+binpath="${builddir}/compiler:${builddir}/tools:${buildbase}/monetdb$V/tools:${buildbase}/testing"
 libpath="${MOD_PATH}"
 
 PATH="${binpath}:$PATH"
 export PATH
 
-PYTHONPATH="${buildbase}/testing/src:${srcdir}/../testing/src:${PYTHONPATH}"
+PYTHONPATH="${buildbase}/testing:${srcdir}/../testing:${PYTHONPATH}"
 export PYTHONPATH
 
 if [ "${LD_LIBRARY_PATH}" ] ; then
@@ -105,4 +105,4 @@ cd "$srcdir"
 # arguments.
 # if the environment variable MTEST_AT is set (value does not matter), pass
 # the --at flag to Mtest.py so that it uses the at command as a watchdog.
-exec python "${buildbase}/testing/src/Mtest.py" -$V --package=${pkg} --monet_mod_path="${MOD_PATH}" --dbfarm="${builddir}/dbfarm" --xrpc_docroot="${srcdir}/runtime/xrpc" --TSTTRGBASE="${builddir}" ${MTEST_AT+--at} "${@--rq}"
+exec python "${buildbase}/testing/Mtest.py" -$V --package=${pkg} --monet_mod_path="${MOD_PATH}" --dbfarm="${builddir}/dbfarm" --xrpc_docroot="${srcdir}/runtime/xrpc" --TSTTRGBASE="${builddir}" ${MTEST_AT+--at} "${@--rq}"
