--- a/sql/RunMtest.in
+++ b/sql/RunMtest.in
@@ -43,13 +43,13 @@ do
 done
 
 # enhance various paths to find our stuff
-binpath="${builddir}/backends/monet5:${buildbase}/monetdb5/tools:${buildbase}/testing/src"
+binpath="${builddir}/backends/monet5:${buildbase}/monetdb5/tools:${buildbase}/testing"
 libpath="${MOD_PATH}:${builddir}/server/.libs"
 
 PATH="${binpath}:$PATH"
 export PATH
 
-PYTHONPATH="${builddir}/backends/python/monet5/.libs:${builddir}/backends/python/monet5:${buildbase}/testing/src:${srcdir}/../testing/src:$PYTHONPATH"
+PYTHONPATH="${builddir}/backends/python/monet5/.libs:${builddir}/backends/python/monet5:${buildbase}/testing:${srcdir}/../testing:$PYTHONPATH"
 export PYTHONPATH
 
 if [ "${LD_LIBRARY_PATH}" ] ; then
@@ -81,4 +81,4 @@ cd "$srcdir"
 # arguments.
 # if the environment variable MTEST_AT is set (value does not matter), pass
 # the --at flag to Mtest.py so that it uses the at command as a watchdog.
-exec python "${buildbase}/testing/src/Mtest.py" --package=${pkg} --monet_mod_path="${MOD_PATH}" --dbfarm="${builddir}/dbfarm" --TSTTRGBASE="${builddir}" ${MTEST_AT+--at} "${@--rq}"
+exec python "${buildbase}/testing/Mtest.py" --package=${pkg} --monet_mod_path="${MOD_PATH}" --dbfarm="${builddir}/dbfarm" --TSTTRGBASE="${builddir}" ${MTEST_AT+--at} "${@--rq}"
