--- a/clients/RunMtest.bat.in
+++ b/clients/RunMtest.bat.in
@@ -13,18 +13,18 @@ set buildbase=@XBUILD@
 set builddir=%buildbase%\clients
 set srcdir=@XSOURCE@\clients
 
-set PATH=%buildbase%\testing\src;%PATH%
+set PATH=%buildbase%\testing;%PATH%
 
 set PATH=%builddir%\mapiclient;%PATH%
 set PATH=%builddir%\mapilib;%PATH%
 set PATH=%builddir%\python;%PATH%
 
-set PYTHONPATH=%srcdir%\python;%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
+set PYTHONPATH=%srcdir%\python;%buildbase%\testing;%srcdir%\..\testing;%PYTHONPATH%
 
 REM execute Mtest.py in the source directory
 pushd %srcdir%
 
-call "%buildbase%\testing\src\Mtest.py" --package=%pkg% "--dbfarm=%builddir%\dbfarm" "--TSTTRGBASE=%builddir%" %*
+call "%buildbase%\testing\Mtest.py" --package=%pkg% "--dbfarm=%builddir%\dbfarm" "--TSTTRGBASE=%builddir%" %*
 
 popd
 endlocal
