--- a/java/RunMtest.bat.in
+++ b/java/RunMtest.bat.in
@@ -13,14 +13,14 @@ set buildbase=@XBUILD@
 set builddir=%buildbase%\java
 set srcdir=@XSOURCE@\java
 
-set PATH=%buildbase%\testing\src;%PATH%
+set PATH=%buildbase%\testing;%PATH%
 
-set PYTHONPATH=%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
+set PYTHONPATH=%buildbase%\testing;%srcdir%\..\testing;%PYTHONPATH%
 
 REM execute Mtest.py in the source directory
 pushd %srcdir%
 
-call "%buildbase%\testing\src\Mtest.py" --package=%pkg% "--dbfarm=%builddir%\dbfarm" "--TSTTRGBASE=%builddir%" %*
+call "%buildbase%\testing\Mtest.py" --package=%pkg% "--dbfarm=%builddir%\dbfarm" "--TSTTRGBASE=%builddir%" %*
 
 popd
 endlocal
