--- a/monetdb4/RunMtest.bat.in
+++ b/monetdb4/RunMtest.bat.in
@@ -25,18 +25,18 @@ set MOD_PATH=%MOD_PATH%;%builddir%\modules\mnetcdf\.libs
 set MOD_PATH=%MOD_PATH%;%builddir%\modules\mnetcdf
 set MOD_PATH=%MOD_PATH%;%srcdir%\scripts\tools
 
-set PATH=%buildbase%\testing\src;%PATH%
+set PATH=%buildbase%\testing;%PATH%
 
 set PATH=%MOD_PATH%;%PATH%
 set PATH=%builddir%\monet;%PATH%
 set PATH=%builddir%\tools;%PATH%
 
-set PYTHONPATH=%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
+set PYTHONPATH=%buildbase%\testing;%srcdir%\..\testing;%PYTHONPATH%
 
 REM execute Mtest.py in the source directory
 pushd %srcdir%
 
-call "%buildbase%\testing\src\Mtest.py" "--config=%builddir%\conf\MonetDB.conf" --package=%pkg% "--monet_mod_path=%MOD_PATH%" "--dbfarm=%builddir%\dbfarm" "--TSTTRGBASE=%builddir%" %*
+call "%buildbase%\testing\Mtest.py" "--config=%builddir%\conf\MonetDB.conf" --package=%pkg% "--monet_mod_path=%MOD_PATH%" "--dbfarm=%builddir%\dbfarm" "--TSTTRGBASE=%builddir%" %*
 
 popd
 endlocal
