--- a/testing/Makefile.ag
+++ b/testing/Makefile.ag
@@ -15,4 +15,42 @@
 # Copyright August 2008-2011 MonetDB B.V.
 # All Rights Reserved.
 
-SUBDIRS = src
+EXTRA_DIST = Mtest.py.in Mtest.py.bat Mlog.in Mlog.bat Mfilter.py.in \
+	     MkillUsers.in testing_getopt.c
+
+bin_Mdiff = {
+	SOURCES = difflib.c helpers.c Mdiff.c difflib.h  helpers.h
+	LIBS = $(MALLOC_LIBS)
+}
+
+bin_Mtimeout = {
+	SOURCES = Mtimeout.c
+	COND = NOT_WIN32
+}
+
+bin_Mapprove.py = bin_Mtest.py
+bin_Mapprove.py.bat = NATIVE_WIN32?bin_Mtest.py.bat
+
+scripts_bat = {
+	COND = NATIVE_WIN32
+	DIR = bindir
+	SOURCES = Mlog.bat Mtest.py.bat
+}
+
+scripts_py = {
+	DIR = bindir
+	SOURCES = Mtest.py Mfilter.py 
+}
+
+headers_python = {
+	HEADERS = py
+	DIR = $(prefix)/$(PYTHON_LIBDIR)/MonetDBtesting
+	SOURCES = trace.py process.py monet_options.py.in __init__.py subprocess26.py
+}
+
+scripts_sh = {
+	COND = NOT_WIN32
+	EXT = ""
+	DIR = bindir
+	SOURCES = Mlog MkillUsers
+}
