--- a/testing/Mtest.py.in
+++ b/testing/Mtest.py.in
@@ -3072,11 +3072,11 @@ def main(argv) :
     cmd_options = [
         # long name, short name, GDK option, argument, comment
         ('package', 'p', 'package', '<package>',
-         "package to be tested, e.g.:\nMonetDB(|4|5), (java|clients|template|sql|pathfinder|geom);\ndefault: %s" % par['PACKAGE']),
-        ('MonetDB4', '4', 'MonetDB4', None,
-         "use Mserver of MonetDB Version 4 (default with <package> in {MonetDB4, pathfinder})"),
-        ('MonetDB5', '5', 'MonetDB5', None,
-         "use mserver5 of MonetDB Version 5 (default with <package> not in {MonetDB4, pathfinder})"),
+         "package to be tested, e.g.:\nmonetdb(|4|5), (java|clients|template|sql|pathfinder|geom);\ndefault: %s" % par['PACKAGE']),
+        ('monetdb4', '4', 'monetdb4', None,
+         "use Mserver of MonetDB Version 4 (default with <package> in {monetdb4, pathfinder})"),
+        ('monetdb5', '5', 'monetdb5', None,
+         "use mserver5 of MonetDB Version 5 (default with <package> not in {monetdb4, pathfinder})"),
         ('algebra', 'G', 'algebra', None,
          "use the algebra version of the XQuery compiler"),
         ('no-algebra', 'g', 'no-algebra', None,
@@ -3167,29 +3167,29 @@ def main(argv) :
     except monet_options.Error:
         sys.exit(1)
 
-    par['M4'] = opts.get('MonetDB4', 0)
-    par['M5'] = opts.get('MonetDB5', 0)
+    par['M4'] = opts.get('monetdb4', 0)
+    par['M5'] = opts.get('monetdb5', 0)
     if par['M4'] and par['M5']:
-        ErrXit('Specifying both "-4/--MonetDB4" and "-5/MonetDB5" is not allowed!')
+        ErrXit('Specifying both "-4/--monetdb4" and "-5/monetdb5" is not allowed!')
 
     pkg = opts.get('package')
     if pkg is None:
         if par['PACKAGE'] == 'MonetDB':
             if par['M4']:
-                par['PACKAGE'] = 'MonetDB4'
+                par['PACKAGE'] = 'monetdb4'
             if par['M5']:
-                par['PACKAGE'] = 'MonetDB5'
+                par['PACKAGE'] = 'monetdb5'
             Warn('No (suitable) ./CVS/Repository found and no -p/--package specified. Using default package="%s". Please use -p/--package to overrule.' % par['PACKAGE'])
     else:
         par['PACKAGE'] = pkg
 
-    if par['M4'] and par['PACKAGE'] == 'MonetDB5':
-        ErrXit('"-4/--MonetDB4" conflicts with "--package=MonetDB5"!')
-    if par['M5'] and par['PACKAGE'] == 'MonetDB4':
-        ErrXit('"-5/--MonetDB5" conflicts with "--package=MonetDB4"!')
+    if par['M4'] and par['PACKAGE'] == 'monetdb5':
+        ErrXit('"-4/--monetdb4" conflicts with "--package=monetdb5"!')
+    if par['M5'] and par['PACKAGE'] == 'monetdb4':
+        ErrXit('"-5/--monetdb5" conflicts with "--package=monetdb4"!')
     if not par['M4'] and not par['M5'] and par['PACKAGE'] not in ('MonetDB', 'java', 'clients'):
-        par['M4'] = par['PACKAGE']     in ['MonetDB4', 'pathfinder']
-        par['M5'] = par['PACKAGE'] not in ['MonetDB4', 'pathfinder']
+        par['M4'] = par['PACKAGE']     in ['monetdb4', 'pathfinder']
+        par['M5'] = par['PACKAGE'] not in ['monetdb4', 'pathfinder']
 
     config = opts.get('config')
     if config is None and par['PACKAGE'] not in ('MonetDB', 'java', 'clients'):
