--- a/testing/Mtest.py.in
+++ b/testing/Mtest.py.in
@@ -199,32 +199,55 @@ FAILURES = {
 CONDITIONALS = {
     # X == true   =>  @X_TRUE@='',  @X_FALSE@='#'
     # X == false  =>  @X_TRUE@='#', @X_FALSE@=''
-    # MonetDB:
-    'CROSS_COMPILING'     : "@CROSS_COMPILING_FALSE@",
-    'DOCTOOLS'            : "@DOCTOOLS_FALSE@",
-    'HAVE_JAVA'           : "@HAVE_JAVA_FALSE@",
-    'HAVE_LIBZ'           : "@HAVE_LIBZ_FALSE@",
-    'HAVE_LIBBZ2'         : "@HAVE_LIBBZ2_FALSE@",
-    'HAVE_ODBC'           : "@HAVE_ODBC_FALSE@",
-    'HAVE_PCRE'           : "@HAVE_PCRE_FALSE@",
-    'HAVE_PERL'           : "@HAVE_PERL_FALSE@",
-    'HAVE_PERL_DEVEL'     : "@HAVE_PERL_DEVEL_FALSE@",
-    'HAVE_PERL_SWIG'      : "@HAVE_PERL_SWIG_FALSE@",
-    'HAVE_PHP'            : "@HAVE_PHP_FALSE@",
-    'HAVE_PYTHON'         : "@HAVE_PYTHON_FALSE@",
-    'HAVE_PYTHON_DEVEL'   : "@HAVE_PYTHON_DEVEL_FALSE@",
-    'HAVE_PYTHON_SWIG'    : "@HAVE_PYTHON_SWIG_FALSE@",
-    'HAVE_RUBYGEM'        : "@HAVE_RUBYGEM_FALSE@",
-    'HAVE_SWIG'           : "@HAVE_SWIG_FALSE@",
-    'LINK_STATIC'         : "@LINK_STATIC_FALSE@",
-    'NOT_WIN32'           : "@NOT_WIN32_FALSE@",
-    'PROFILING'           : "@PROFILING_FALSE@",
-    # SQL:
-    'NATIVE_WIN32'        : "@NATIVE_WIN32_FALSE@",
+    # from buildtools/conf/MonetDB.m4:
+    'BITS32'               : "@BITS32_FALSE@",
+    'BITS64'               : "@BITS64_FALSE@",
+    'HAVE_CLIENTS'         : "@HAVE_CLIENTS_FALSE@",
+    'HAVE_LIBBZ2'          : "@HAVE_LIBBZ2_FALSE@",
+    'HAVE_MONETDB'         : "@HAVE_MONETDB_FALSE@",
+    'HAVE_MONETDB5_RDF'    : "@HAVE_MONETDB5_RDF_FALSE@",
+    'HAVE_MONETDB5_XML'    : "@HAVE_MONETDB5_XML_FALSE@",
+    'HAVE_PERL'            : "@HAVE_PERL_FALSE@",
+    'HAVE_PERL_DEVEL'      : "@HAVE_PERL_DEVEL_FALSE@",
+    'HAVE_PYTHON'          : "@HAVE_PYTHON_FALSE@",
+    'HAVE_RUBYGEM'         : "@HAVE_RUBYGEM_FALSE@",
+    'HAVE_SWIG'            : "@HAVE_SWIG_FALSE@",
+    'LINK_STATIC'          : "@LINK_STATIC_FALSE@",
+    'PROFILING'            : "@PROFILING_FALSE@",
+    # from configure.ag:
+    'CROSS_COMPILING'      : "@CROSS_COMPILING_FALSE@",
+    'DOCTOOLS'             : "@DOCTOOLS_FALSE@",
+    'HAVE_CFITSIO'         : "@HAVE_CFITSIO_FALSE@",
+    'HAVE_DEVELOPER'       : "@HAVE_DEVELOPER_FALSE@",
+    'HAVE_GEOM'            : "@HAVE_GEOM_FALSE@",
+    'HAVE_JAVAJDBC'        : "@HAVE_JAVAJDBC_FALSE@",
+    'HAVE_JAVAMEROCONTROL' : "@HAVE_JAVAMEROCONTROL_FALSE@",
+    'HAVE_JAVAXRPC'        : "@HAVE_JAVAXRPC_FALSE@",
+    'HAVE_LIBXML2'         : "@HAVE_LIBXML2_FALSE@",
+    'HAVE_MSEED'           : "@HAVE_MSEED_FALSE@",
+    'HAVE_NETCDF'          : "@HAVE_NETCDF_FALSE@",
+    'HAVE_ODBC'            : "@HAVE_ODBC_FALSE@",
+    'HAVE_PATHFINDER'      : "@HAVE_PATHFINDER_FALSE@",
+    'HAVE_PFTIJAH'         : "@HAVE_PFTIJAH_FALSE@",
+    'HAVE_PROBXML'         : "@HAVE_PROBXML_FALSE@",
+    'HAVE_RAPTOR'          : "@HAVE_RAPTOR_FALSE@",
+    'HAVE_SPHINXCLIENT'    : "@HAVE_SPHINXCLIENT_FALSE@",
+    'HAVE_SQL'             : "@HAVE_SQL_FALSE@",
+    'HAVE_TESTING'         : "@HAVE_TESTING_FALSE@",
+    # from both buildtools/conf/MonetDB.m4 & configure.ag !??:
+    'HAVE_ANT'             : "@HAVE_ANT_FALSE@",
+    'HAVE_BUILDTOOLS'      : "@HAVE_BUILDTOOLS_FALSE@",
+    'HAVE_EXTRA_MK'        : "@HAVE_EXTRA_MK_FALSE@",
+    'HAVE_JAVA'            : "@HAVE_JAVA_FALSE@",
+    'HAVE_LIBZ'            : "@HAVE_LIBZ_FALSE@",
+    'HAVE_MONETDB4'        : "@HAVE_MONETDB4_FALSE@",
+    'HAVE_MONETDB5'        : "@HAVE_MONETDB5_FALSE@",
+    'HAVE_PERL_SWIG'       : "@HAVE_PERL_SWIG_FALSE@",
+    'NATIVE_WIN32'         : "@NATIVE_WIN32_FALSE@",
+    'NEED_MX'              : "@NEED_MX_FALSE@",
+    'NOT_WIN32'            : "@NOT_WIN32_FALSE@",
     # unknown at compile time, as Mtest.py is compiled with MonetDB;
     # hence, we set them at runtime in main() below
-    'HAVE_MONETDB5'       : "@HAVE_MONETDB5_FALSE@",
-    'HAVE_MONETDB4'       : "@HAVE_MONETDB4_FALSE@",
     'HAVE_MONETDBJDBC_JAR': "",
     'HAVE_JDBCCLIENT_JAR' : "",
     'HAVE_JDBCTESTS_JAR'  : "",
