--- a/testing/Mtest.py.in
+++ b/testing/Mtest.py.in
@@ -247,18 +247,18 @@ CONDITIONALS = {
     'NATIVE_WIN32'         : "@NATIVE_WIN32_FALSE@",
     'NEED_MX'              : "@NEED_MX_FALSE@",
     'NOT_WIN32'            : "@NOT_WIN32_FALSE@",
-    # unknown at compile time, as Mtest.py is compiled with MonetDB;
-    # hence, we set them at runtime in main() below
-    'HAVE_MONETDBJDBC_JAR': "",
-    'HAVE_JDBCCLIENT_JAR' : "",
-    'HAVE_JDBCTESTS_JAR'  : "",
-    'HAVE_JDBCTESTS_DIR'  : "",
-    'HAVE_JDBCTESTS'      : "",
-    'HAVE_XRPCAPI_JAR'    : "",
-    'HAVE_XRPCCLIENT_JAR' : "",
-    'HAVE_XRPCWRAPPER_JAR': "",
-    'WITH_ALGEBRA'        : "",
-    'NOT_ALGEBRA'         : "",
+    # unknown at compile time;
+    # hence, we set them only at runtime in main() below
+    'HAVE_MONETDBJDBC_JAR' : "",
+    'HAVE_JDBCCLIENT_JAR'  : "",
+    'HAVE_JDBCTESTS_JAR'   : "",
+    'HAVE_JDBCTESTS_DIR'   : "",
+    'HAVE_JDBCTESTS'       : "",
+    'HAVE_XRPCAPI_JAR'     : "",
+    'HAVE_XRPCCLIENT_JAR'  : "",
+    'HAVE_XRPCWRAPPER_JAR' : "",
+    'WITH_ALGEBRA'         : "",
+    'NOT_ALGEBRA'          : "",
 }
 
 # a bunch of classes to help with generating (X)HTML files
@@ -2783,14 +2783,15 @@ def CheckClassPath(quiet) :
                 if os.path.isfile(p):
                     if f == 'BugConcurrent_clients_SF_1504657.class':
                         C = 'HAVE_JDBCTESTS_DIR'
-                        if not CONDITIONALS.has_key(C):
+                        if not ( CONDITIONALS.has_key(C) and CONDITIONALS[C] ):
                             cp = cp + os.pathsep + d
                             CONDITIONALS[C] = '#'
                     else:
                         C = 'HAVE_%s' % f.upper().replace('.','_')
                         if not JARS.has_key(C):
                             C = 'HAVE_MONETDBJDBC_JAR'
-                        if not CONDITIONALS.has_key(C) and JARS[C].match(f):
+                        if not ( CONDITIONALS.has_key(C) and CONDITIONALS[C] ) \
+                           and JARS[C].match(f):
                             cp = cp + os.pathsep + p
                             CONDITIONALS[C] = '#'
     if cp:
@@ -2798,11 +2799,13 @@ def CheckClassPath(quiet) :
     miss = ''
     for j in ['monetdbjdbc.jar', 'jdbcclient.jar', 'jdbctests.jar', 'xrpcapi.jar', 'xrpcclient.jar', 'xrpcwrapper.jar']:
         C = 'HAVE_%s' % j.upper().replace('.','_')
-        if not CONDITIONALS.has_key(C):
+        if not ( CONDITIONALS.has_key(C) and CONDITIONALS[C] ):
             miss += ' "%s"' % j
     if miss and not quiet:
         Warn('Could not find%s in\nCLASSPATH="%s"' % (miss,cpx))
-    if CONDITIONALS.has_key('HAVE_MONETDBJDBC_JAR') and ( CONDITIONALS.has_key('HAVE_JDBCTESTS_JAR') or CONDITIONALS.has_key('HAVE_JDBCTESTS_DIR')):
+    if ( CONDITIONALS.has_key('HAVE_MONETDBJDBC_JAR') and CONDITIONALS['HAVE_MONETDBJDBC_JAR'] ) and \
+       ( ( CONDITIONALS.has_key('HAVE_JDBCTESTS_JAR') and CONDITIONALS['HAVE_JDBCTESTS_JAR'] ) or \
+         ( CONDITIONALS.has_key('HAVE_JDBCTESTS_DIR') and CONDITIONALS['HAVE_JDBCTESTS_DIR'] ) ):
         CONDITIONALS['HAVE_JDBCTESTS'] = '#'
 ### CheckClassPath(quiet) #
 
