Implemented createdb.sql as a directory. If "createdb" is a directory in the search path, execute all .sql files in that directory in order when initializing a new database. This way it is easy to drop in extra SQL modules.
Also removed definitions from geom.sql (renamed to 40_geom.sql) that
don't actually work.

--- a/geom/sql/Makefile.ag
+++ b/geom/sql/Makefile.ag
@@ -17,8 +17,8 @@
 
 headers_sql = {
 	HEADERS = sql
-	DIR = datadir/MonetDB/sql
-	SOURCES = geom.sql
+	DIR = libdir/monetdb5/createdb
+	SOURCES = 40_geom.sql
 }
 
 EXTRA_DIST_DIR = Tests
