sabaoth: detangle from M5 and GDK
Moved mal_sabaoth to msabaoth, made sure this is compiled first thing,
without any dependencies on GDK-memory functions.  At the same time,
stripped merovingian and friends from any M5 and GDK references.

--- a/monetdb5/mal/Makefile.ag
+++ b/monetdb5/mal/Makefile.ag
@@ -15,7 +15,8 @@
 # Copyright August 2008-2011 MonetDB B.V.
 # All Rights Reserved.
 
-INCLUDES = ../../common/options \
+INCLUDES = ../misc \
+		   ../../common/options \
 		   ../../common/stream \
 		   ../../clients/mapilib \
 		   ../../gdk \
