--- a/sql/backends/monet5/Makefile.ag
+++ b/sql/backends/monet5/Makefile.ag
@@ -21,6 +21,7 @@ SUBDIRS = NOT_WIN32?merovingian NOT_WIN32?vaults
 RDF_INC = -I../../../monetdb5/extras/rdf
 
 INCLUDES = ../../include ../../common ../../storage ../../server \
+		   ../../../monetdb5/misc \
 		   ../../../monetdb5/modules/atoms \
 		   ../../../monetdb5/compiler \
 		   ../../../monetdb5/modules/kernel \
