--- a/monetdb5/Makefile.ag
+++ b/monetdb5/Makefile.ag
@@ -15,7 +15,11 @@
 # Copyright August 2008-2011 MonetDB B.V.
 # All Rights Reserved.
 
-SUBDIRS = mal modules optimizer scheduler tools extras conf
+# misc: stuff that can be built without deps, but others may depend on
+# mal, modules, optimizer, scheduler: the main libmonetdb5 body, needs misc
+# tools: builds libmonetdb5 from mal, modules, optimizer, scheduler
+# extras: builds optional/separate libraries that require libmonetdb5
+SUBDIRS = misc mal modules optimizer scheduler tools extras
 
 EXTRA_DIST = RunMtest.in \
 		RunMtest.bat.in RunMapprove.in RunMapprove.bat.in \
