Fixed .spec file for new situation. Various RPMs have been removed (with added Obsoletes). Added MonetDB-stream{,-devel} RPMs. Implemented adding ODBC driver information to system file (using odbcinst). Implemented move of /var/MonetDB5 to /var/monetdb5. Added lib_rdf library conditionally to sql module so that RPM knows there is a dependency. Moved libmonet{,db5}.* back to /usr/lib{,64} since otherwise RPM can't find them when looking for dependencies.  And since these libraries are linked to by other pieces of code (e.g. geom module), it makes sense.

--- a/monetdb4/monet/Makefile.ag
+++ b/monetdb4/monet/Makefile.ag
@@ -43,7 +43,7 @@ CFLAGS = $(GCC_BISON_CFLAGS)
 MTSAFE
 
 lib_monet = { 
-	DIR = libdir/monetdb4
+	DIR = libdir
 	SOURCES = \
 		monet.mx monet_interpreter.mx monet_queue.mx yytree.mx \
 		monet_client.mx monet_multiplex.mx monet_tbl.mx \
