--- a/geom/RunMtest.in
+++ b/geom/RunMtest.in
@@ -51,7 +51,7 @@ case "$V" in
 # where compiled monetdb4 modules are to be found
 for d in modules/plain modules/contrib modules/calibrator modules/mapi @HAVE_NETCDF_TRUE@ modules/mnetcdf
 do
-	MOD_PATH="${MOD_PATH}${buildbase}/monetdb4/$d/.libs:${builddir}/$d:"
+	MOD_PATH="${MOD_PATH}${buildbase}/monetdb4/$d/.libs:${buildbase}/monetdb4/$d:"
 done
 MOD_PATH="${MOD_PATH}${srcdir}/../monetdb4/scripts/tools"
 ;;
@@ -59,7 +59,7 @@ MOD_PATH="${MOD_PATH}${srcdir}/../monetdb4/scripts/tools"
 # where compiled SQL modules are to be found
 for d in backends/monet5 sql
 do
-	MOD_PATH="${MOD_PATH}${buildbase}/sql/$d/.libs:${builddir}/$d:"
+	MOD_PATH="${MOD_PATH}${buildbase}/sql/$d/.libs:${buildbase}/sql/$d:"
 	# enable auto-loading of modules before `make install`
 	mkdir -p ${buildbase}/sql/$d/autoload
 	cp -f ${srcdir}/../sql/$d/[0-9][0-9]_*.mal ${buildbase}/sql/$d/autoload/ 2>/dev/null
@@ -67,7 +67,7 @@ done
 # where compiled monetdb5 modules are to be found
 for d in compiler optimizer scheduler modules/atoms modules/kernel modules/mal modules/mal/crackers modules/mal/rdf
 do
-	MOD_PATH="${MOD_PATH}${buildbase}/monetdb5/$d/.libs:${builddir}/$d:"
+	MOD_PATH="${MOD_PATH}${buildbase}/monetdb5/$d/.libs:${buildbase}/monetdb5/$d:"
 	# enable auto-loading of modules before `make install`
 	mkdir -p ${buildbase}/monetdb5/$d/autoload
 	cp -f ${srcdir}/../monetdb5/$d/[0-9][0-9]_*.mal ${buildbase}/monetdb5/$d/autoload/ 2>/dev/null
