--- a/clients/RunMtest.in
+++ b/clients/RunMtest.in
@@ -33,7 +33,7 @@ do
 done
 
 # enhance various paths to find our stuff
-PATH="${builddir}/mapiclient:${builddir}/python:${buildbase}/testing:$PATH"
+PATH="${builddir}/mapiclient:${buildbase}/testing:$PATH"
 export PATH
 
 PYTHONPATH="${srcdir}/python:${buildbase}/testing:${srcdir}/../testing:${PYTHONPATH}"
