--- a/java/RunMtest.bat.in
+++ b/java/RunMtest.bat.in
@@ -13,7 +13,7 @@ set buildbase=@XBUILD@
 set builddir=%buildbase%\java
 set srcdir=@XSOURCE@\java
 
-set PATH=%buildbase%\testing;%PATH%
+set PATH=%buildbase%\clients\mapiclient;%buildbase%\testing;%PATH%
 
 set PYTHONPATH=%buildbase%\testing;%srcdir%\..\testing;%PYTHONPATH%
 
