--- a/java/RunMtest.in
+++ b/java/RunMtest.in
@@ -25,7 +25,7 @@ srcdir=`cd '@srcdir@'; pwd`
 uname=`uname`
 
 # enhance various paths to find our stuff
-PATH="${buildbase}/testing:$PATH"
+PATH="${buildbase}/clients/mapiclient:${buildbase}/testing:$PATH"
 export PATH
 
 PYTHONPATH="${buildbase}/testing:${srcdir}/../testing:${PYTHONPATH}"
