--- a/monetdb5/RunMtest.bat.in
+++ b/monetdb5/RunMtest.bat.in
@@ -36,7 +36,7 @@ copy /y %srcdir%\extras\rdf\??_*.mal %builddir%\extras\rdf\autoload
 if not exist %builddir%\modules\atoms\autoload mkdir %builddir%\modules\atoms\autoload
 copy /y %srcdir%\modules\atoms\??_*.mal %builddir%\modules\atoms\autoload
 
-set PATH=%buildbase%\testing;%PATH%
+set PATH=%buildbase%\clients\mapiclient;%buildbase%\testing;%PATH%
 
 set PATH=%MOD_PATH%;%PATH%
 set PATH=%builddir%\mal;%PATH%
