--- a/monetdb5/RunMtest.in
+++ b/monetdb5/RunMtest.in
@@ -34,7 +34,7 @@ do
 done
 
 # enhance various paths to find our stuff
-binpath="${builddir}/tools:${srcdir}/tools:${buildbase}/testing"
+binpath="${builddir}/tools:${srcdir}/tools:${buildbase}/clients/mapiclient:${buildbase}/testing"
 libpath="${MOD_PATH}:${builddir}/mal/.libs"
 
 PATH="${binpath}:$PATH"
