--- a/template/RunMtest.in
+++ b/template/RunMtest.in
@@ -66,7 +66,7 @@ esac
 
 # enhance various paths to find our stuff
 libpath="${MOD_PATH}"
-PATH="${buildbase}/monetdb$V/tools:${buildbase}/testing:$PATH"
+PATH="${buildbase}/monetdb$V/tools:${buildbase}/clients/mapiclient:${buildbase}/testing:$PATH"
 export PATH
 
 PYTHONPATH="${buildbase}/testing:${srcdir}/../testing:${PYTHONPATH}"
