--- a/geom/RunMtest.in
+++ b/geom/RunMtest.in
@@ -46,6 +46,10 @@ do
 	cp -f ${srcdir}/$d/[0-9][0-9]_*.mal ${builddir}/$d/autoload/ 2>/dev/null
 done
 
+# enable auto-loading of SQL createdb scripts before `make install`
+mkdir -p ${builddir}/sql/createdb
+cp -f ${srcdir}/sql/[0-9][0-9]_*.sql ${builddir}/sql/createdb/ 2>/dev/null
+
 case "$V" in
 4)
 # where compiled monetdb4 modules are to be found
@@ -64,6 +68,9 @@ do
 	mkdir -p ${buildbase}/sql/$d/autoload
 	cp -f ${srcdir}/../sql/$d/[0-9][0-9]_*.mal ${buildbase}/sql/$d/autoload/ 2>/dev/null
 done
+# enable auto-loading of SQL createdb scripts before `make install`
+mkdir -p ${buildbase}/sql/sql/createdb
+cp -f ${srcdir}/../sql/sql/[0-9][0-9]_*.sql ${buildbase}/sql/sql/createdb/ 2>/dev/null
 # where compiled monetdb5 modules are to be found
 for d in compiler optimizer scheduler modules/atoms modules/kernel modules/mal modules/mal/crackers modules/mal/rdf
 do
